--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -88,7 +88,7 @@ main {
   }
 }
 
-#btn_login {
+.btn_login {
   width: 100%;
   padding: 14px 52px;
   border-radius: 5px;
@@ -205,7 +205,7 @@ main {
   .login-input-wrap {
     width: calc(100% - 88px);
   }
-  #btn_login {
+  .btn_login {
     width: 80px;
     height: 100px;
     padding: 20px;
@@ -233,7 +233,7 @@ main {
       font-size: 1.6rem;
     }
   }
-  #btn_login {
+  .btn_login {
     font-size: 1.6rem;
     width: 82px;
   }
