feat: searchId 구현

--- a/src/style-reset.css
+++ b/src/style-reset.css
@@ -58,6 +58,9 @@ select {
   font-family: "NanumSquare";
   color: #333333;
 }
+input:focus {
+  outline: none;
+}
 .screen_out {
   position: absolute;
   left: -9999px;
