--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -256,7 +256,9 @@ header {
   }
 }
 @media screen and (min-width: 1280px) {
-  .header_wrap {
-    width: 67%;
+  header {
+    .header_wrap {
+      width: 67%;
+    }
   }
 }
