--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -30,6 +30,9 @@
     padding: 20px 28px;
     background: #eee;
     border-radius: 0 0 5px 5px;
+    button {
+      max-width: 180px;
+    }
   }
 
   //내부 폼
