--- a/src/pages/signup/Signup.module.scss
+++ b/src/pages/signup/Signup.module.scss
@@ -19,8 +19,15 @@
         line-height: 24px;
         border: 1px solid #aaaaaa;
         border-radius: 4px;
+        background-color: #efefef;
         color: #444444;
         letter-spacing: -1px;
+        &:focus {
+          background-color: #fff;
+        }
+        &:read-only {
+          background-color: #efefef !important;
+        }
       }
       .item {
         margin-top: 30px;
@@ -41,10 +48,7 @@
         .req_btn,
         .confirm_btn {
           width: 40%;
-          cursor: pointer;
           font-size: 1.4rem;
-          background-color: #aaaaaa;
-          border-radius: 4px;
         }
       }
       .checkEmail {
@@ -150,11 +154,7 @@
         padding: 19px 28px;
         font-size: 1.6rem;
         line-height: 24px;
-        border-radius: 4px;
         text-align: center;
-        color: #444444;
-        background-color: #aaa;
-        cursor: pointer;
       }
     }
   }
