--- a/src/pages/signup/Signup.module.scss
+++ b/src/pages/signup/Signup.module.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 
 .signup_wrap {
   width: 100%;
@@ -10,33 +10,8 @@
     margin: 0 auto;
     margin-top: 50px;
     form {
-      input {
-        box-sizing: border-box;
-        width: 100%;
-        padding: 13px 12px;
-        height: 48px;
-        font-size: 1.4rem;
-        line-height: 24px;
-        border: 1px solid #aaaaaa;
-        border-radius: 4px;
-        background-color: #efefef;
-        color: #444444;
-        letter-spacing: -1px;
-        &:focus {
-          background-color: #fff;
-        }
-        &:read-only {
-          background-color: #efefef !important;
-        }
-      }
       .item {
         margin-top: 30px;
-        label {
-          display: flex;
-          font-size: 1.8rem;
-          color: #444444;
-          margin-bottom: 8px;
-        }
         &:nth-child(1) div {
           display: flex;
           gap: 20px;
@@ -87,7 +62,7 @@
         label {
           font-size: 1.6rem;
           color: #444444;
-          font-family: "NanumSquareBold";
+          font-family: 'NanumSquareBold';
           line-height: 27px;
           margin-left: 8px;
         }
@@ -108,7 +83,7 @@
         label {
           font-size: 1.2rem;
           color: #444444;
-          font-family: "NanumSquareBold";
+          font-family: 'NanumSquareBold';
           margin-left: 8px;
         }
         .arrow {
@@ -120,7 +95,7 @@
         }
       }
       .join_input2 label {
-        font-family: "NanumSquareLight";
+        font-family: 'NanumSquareLight';
       }
       .join_radio {
         margin: 40px 0;
@@ -165,15 +140,7 @@
       width: 510px;
       margin-top: 70px;
       form {
-        input {
-          height: 60px;
-          font-size: 1.6rem;
-        }
         .item {
-          label {
-            font-size: 1.8rem;
-            font-family: "NanumSquareBold";
-          }
           .req_btn,
           .confirm_btn {
             font-size: 1.6rem;
@@ -234,9 +201,6 @@
   @media screen and (min-width: 1024px) {
     .signup {
       form {
-        input {
-          font-size: 1.8rem;
-        }
         .join_input {
           label {
             font-size: 1.8rem;
