--- a/src/components/elements/Element.module.scss
+++ b/src/components/elements/Element.module.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
 
-input {
+.input {
   width: 100%;
   height: 60px;
   padding-left: 20px;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   border-radius: 4px;
   &::placeholder {
     color: #aaa;
@@ -13,9 +13,12 @@ input {
     color: #aaa;
     background-color: #efefef;
   }
+  @media screen and (min-width: 768px) {
+    font-size: 1.8rem;
+  }
 }
 .input_default {
-  background-color: #fff;
+  background-color: #efefef;
   border: 1px solid #aaa;
   color: #aaa;
   &:hover {
@@ -42,9 +45,44 @@ input {
   }
 }
 
+.label {
+  font-size: 1.6rem;
+  @media screen and (min-width: 768px) {
+    font-size: 1.8rem;
+  }
+}
 .label_default {
   display: flex;
-  font-size: 1.8rem;
   color: #222;
   margin-bottom: 8px;
+}
+
+.button {
+  height: 60px;
+  border-radius: 3px;
+  padding: 0 40px;
+  font-size: 1.6rem;
+  @media screen and (min-width: 768px) {
+    font-size: 1.8rem;
+  }
+}
+
+.btn_default {
+  color: #6269f5;
+  background-color: #fafafa;
+  border: solid 1px #aaa;
+  &:hover {
+    background-color: #6269f5;
+    color: #fafafa;
+  }
+}
+.btn_condition_false {
+  color: #fafafa;
+  background-color: #aaa;
+  border: solid 1px #aaa;
+}
+.btn_condition_true {
+  background-color: #6269f5;
+  border: solid 1px #6269f5;
+  color: #fafafa;
 }
