--- a/src/pages/signup/Signup.module.scss
+++ b/src/pages/signup/Signup.module.scss
@@ -9,21 +9,28 @@
     width: 80%;
     margin: 0 auto;
     margin-top: 50px;
+    font-size: 1.6rem;
+    & > h1 {
+      color: #000;
+      font-size: 2.8rem;
+      text-align: center;
+      margin: 50px 0;
+    }
     form {
       .item {
         margin-top: 30px;
-        &:nth-child(1) div {
+        & > div:nth-of-type(1) {
           display: flex;
+          flex-direction: column;
           gap: 20px;
         }
-        &:nth-child(2) div {
+        & > div:nth-of-type(2) {
           display: flex;
-          gap: 20px;
+          gap: 10px;
+          color: red;
         }
-        .req_btn,
-        .confirm_btn {
-          width: 40%;
-          font-size: 1.4rem;
+        button {
+          width: 100%;
         }
       }
       .checkEmail {
@@ -70,8 +77,8 @@
       .join_input {
         position: relative;
         display: flex;
+        justify-content: space-between;
         align-items: center;
-        text-align: center;
         width: 100%;
         input {
           width: 20px;
@@ -81,14 +88,15 @@
           border-radius: 4px;
         }
         label {
-          font-size: 1.2rem;
+          flex-grow: 1;
+          text-align: start;
+          font-size: 1.4rem;
           color: #444444;
           font-family: 'NanumSquareBold';
           margin-left: 8px;
         }
         .arrow {
           font-size: 1.6rem;
-          position: absolute;
           right: 0px;
           color: #aaa;
           cursor: pointer;
@@ -97,39 +105,12 @@
       .join_input2 label {
         font-family: 'NanumSquareLight';
       }
-      .join_radio {
-        margin: 40px 0;
-        div {
-          font-size: 1.8rem;
-          margin-bottom: 10px;
-        }
-        ul {
-          display: flex;
-          li {
-            display: flex;
-            align-items: center;
-            margin-right: 20px;
-            input {
-              width: 20px;
-              height: 20px;
-              background-color: #fafafa;
-              border: 1px solid #aaa;
-              margin-right: 8px;
-            }
-            label {
-              text-align: center;
-              font-size: 1.4rem;
-            }
-          }
-        }
-      }
       .btn_signup button {
         width: 100%;
-        height: 60px;
         padding: 19px 28px;
-        font-size: 1.6rem;
         line-height: 24px;
         text-align: center;
+        margin-top: 40px;
       }
     }
   }
@@ -137,13 +118,18 @@
   /* 테블릿 768 사이즈 반응형 */
   @media screen and (min-width: 768px) {
     .signup {
-      width: 510px;
+      width: 500px;
       margin-top: 70px;
+      font-size: 1.8rem;
       form {
         .item {
-          .req_btn,
-          .confirm_btn {
-            font-size: 1.6rem;
+          & > div:nth-of-type(1) {
+            flex-direction: row;
+            gap: 20px;
+          }
+          button {
+            flex-shrink: 0;
+            width: 148px;
           }
         }
         .checkmsg {
@@ -152,60 +138,28 @@
         .join_agree {
           margin-top: 60px;
         }
-      }
-      .join_input_all {
-        input {
-          width: 28px;
-          height: 28px;
-        }
-        label {
-          font-size: 1.8rem;
-          margin-left: 10px;
-        }
-      }
-      .join_input {
-        input {
-          width: 24px;
-          height: 24px;
-        }
-        label {
-          font-size: 1.6rem;
-          margin-left: 10px;
-        }
-      }
-      .join_radio {
-        margin: 60px 0;
-        div {
-          font-size: 1.8rem;
-          margin-bottom: 24px;
-        }
-        ul {
-          li {
-            input {
-              width: 24px;
-              height: 24px;
-            }
-            label {
-              font-size: 1.6rem;
-            }
+        .join_input_all {
+          input {
+            width: 30px;
+            height: 30px;
           }
-        }
-      }
-      .btn_signup button {
-        font-size: 1.8rem;
-      }
-    }
-  }
-
-  /* PC 1024 사이즈 반응형 */
-  @media screen and (min-width: 1024px) {
-    .signup {
-      form {
-        .join_input {
           label {
             font-size: 1.8rem;
             margin-left: 10px;
           }
+        }
+        .join_input {
+          input {
+            width: 30px;
+            height: 30px;
+          }
+          label {
+            font-size: 1.6rem;
+            margin-left: 10px;
+          }
+        }
+        .btn_signup button {
+          font-size: 1.8rem;
         }
       }
     }
