--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -6,7 +6,6 @@
 footer {
   width: 100%;
   height: 220px;
-  font-size: 1.4rem;
   margin-bottom: 50px;
 
   .footer_wrap {
@@ -25,6 +24,9 @@ footer {
       justify-content: space-between;
       align-items: center;
       height: auto;
+      & > a {
+        font-size: 1.4rem;
+      }
     }
   }
 
@@ -59,6 +61,9 @@ footer {
     height: auto;
     padding: 20px 0;
     row-gap: 10px;
+    & > span {
+      font-size: 1.4rem;
+    }
     & > span:not(:last-child)::after {
       content: "|";
       color: #888;
