--- a/src/pages/login/Login.module.scss
+++ b/src/pages/login/Login.module.scss
@@ -3,9 +3,6 @@
 .mo_none {
   display: none;
 }
-.content-font {
-  font-size: 1.4rem;
-}
 
 /* header end */
 main {
@@ -14,27 +11,26 @@ main {
 }
 
 .main_wrap {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
   width: 80%;
-  margin: 80px auto;
+  min-width: 295px;
+  max-width: 360px;
+  margin: 120px auto;
   .login_wrap {
     width: 100%;
-    max-width: 390px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 32px;
     padding: 80px 28px;
     border: 1px solid #aaa;
     border-radius: 12px;
     background-color: #eeefff;
     & > h1 {
       text-align: center;
-      font-size: 1.8rem;
     }
   }
   .login_box {
+    width: 250px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -43,18 +39,12 @@ main {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    & > form > input::placeholder {
-      color: #000;
-      font-size: 1.2rem;
-      font-family: "NanumSquareAcl";
-    }
     .userid {
       width: 100%;
       padding: 16px 12px;
       border-radius: 4px 4px 0px 0px;
       border: 1px solid #aaa;
       background-color: #fafafa;
-      font-size: 1.4rem;
     }
     .userpw {
       width: 100%;
@@ -62,106 +52,63 @@ main {
       border-radius: 0px 0px 4px 4px;
       border: 1px solid #aaa;
       background-color: #fafafa;
-      font-size: 1.4rem;
       margin-top: -1px;
     }
     .login_option {
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
-      gap: 10px;
+      gap: 2px;
       margin-top: 8px;
-      .save_id > input {
-        width: 14px;
-        height: 14px;
+      & > a {
+        color: #aaa;
       }
-      .save_id > label {
-        margin-left: 5px;
-        font-size: 1.2rem;
-        vertical-align: top;
-      }
-      & > button {
-        font-size: 1.2rem;
-        vertical-align: top;
-        font-family: "NanumSquareAcl";
-        color: #000;
-        background-color: transparent;
+      & > span {
+        color: #d9d9d9;
       }
     }
   }
-
-  .btn_login {
-    width: 100%;
-    padding: 14px 52px;
-    font-size: 1.4rem;
-    font-family: "NanumSquareAcb";
-  }
-
   .to_signup {
     margin: 0 auto;
-    font-size: 1.2rem;
     & > a {
       margin-left: 16px;
-      font-family: "NanumSquareBold";
+      color: #6269f5;
     }
   }
-
-  .ad_wrap {
-    width: 270px;
-    background: url(@/assets/images/needU_login_banner.jpg) no-repeat
-      center/cover;
-    border-radius: 5px;
+  .social_login {
+    width: 250px;
+    margin: 0 auto;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 12px;
+    .kakao {
+      width: 200px;
+      height: 40px;
+      background: url(@/assets/images/social_kakao.png) no-repeat center/contain;
+    }
+    .naver {
+      width: 52px;
+      height: 40px;
+      background: url(@/assets/images/social_naver.png) no-repeat center/contain;
+    }
   }
 }
 
 /* main end */
+/* mobile-end */
 
-/* 테블릿 768 사이즈 반응형 */
 @media screen and (min-width: 768px) {
-  .tab_none {
-    display: none;
-  }
-  .tab_show {
-    display: block;
-  }
   .main_wrap {
+    .login_wrap {
+      padding: 80px 50px;
+    }
     .login_box {
-      flex-direction: row;
-      gap: 8px;
+      width: 258px
     }
-    .login_input_wrap {
-      width: calc(100% - 88px);
-    }
-    .btn_login {
-      width: 80px;
-      height: 100px;
-      padding: 20px;
-    }
-  }
-}
-/* PC 1024 사이즈 반응형 */
-@media screen and (min-width: 1024px) {
-  .pc_show {
-    display: block;
-  }
-  .main_wrap {
-    gap: 50px;
-    .login_input_wrap {
-      width: calc(100% - 90px);
-      & > form > input::placeholder {
-        font-size: 1.4rem;
-      }
-      .userid,
-      .userpw {
-        font-size: 1.6rem;
-      }
-    }
-    .btn_login {
-      font-size: 1.6rem;
-      width: 82px;
-    }
-    .to_signup {
-      font-size: 1.4rem;
+    .social_login {
+      width: 258px;
     }
   }
 }
