--- a/src/pages/signup/Signup.module.scss
+++ b/src/pages/signup/Signup.module.scss
@@ -93,7 +93,7 @@
         }
       }
       .join_input2 label {
-        font-family: 'NanumSquareLight';
+        color: #888;
       }
       .btn_signup button {
         width: 100%;
