--- a/src/style-reset.scss
+++ b/src/style-reset.scss
@@ -24,17 +24,6 @@ body {
 html {
   color: #333333;
   font-size: 0.625rem;
-  font-family: 'NanumSquare';
-  /* font-family: 'NanumSquareNeo-Variable'; */
-}
-.container {
-  width: 100%;
-  height: auto;
-  min-height: 100%;
-  background-color: #fafafa;
-  overflow: auto;
-  position: relative;
-  padding-bottom: 200px;
 }
 a {
   text-decoration: none;
@@ -58,7 +47,6 @@ button{
 
 input,
 select {
-  font-family: 'NanumSquare';
   color: #333333;
 }
 input:focus {
@@ -92,8 +80,10 @@ i {
 // font setting
 * { //default
   color: #000;
+  font-family: 'Pretendard-Regular';
+  // src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-size: 1.6rem;
-  font-family: 'NanumSquare';
+  font-style: normal;
 }
 .title {
   font-size: 1.8rem;
