--- a/src/pages/findIdPw/Find.module.scss
+++ b/src/pages/findIdPw/Find.module.scss
@@ -5,51 +5,62 @@
 
 .wrap {
   max-width: 500px;
-}
-.explanation {
-  text-align: center;
-}
-
-.search_form {
-  margin-top: 58px;
-  & > div:nth-of-type(2){
-    margin-top: 30px;
-    button {
-      margin-top: 58px;
-    }
-  }
-}
-.checkmsg {
-  margin-top: 6px;
-  margin-left: 6px;
-  color: #ff4444;
-}
-
-.info {
-  display: flex;
-  flex-direction: row;
-  margin-top: 8px;
-  & > i {
-    margin-left: 10px;
-    width: 16px;
-    background: url(@/assets/images/ico_info.png) no-repeat center/contain;
-  }
-}
-button {
-  width: 100%;
-  margin-top: 15px;
-}
-
-.result {
-  margin-top: 80px;
-  border-top: 1px solid #aaa;
-  & > div {
-    margin-top: 20px;
+  .explanation {
     text-align: center;
   }
-}
 
-.social_login {
-  margin-top: 40px;
-  height: 60px;
+  .search_form {
+    margin-top: 58px;
+    button {
+      width: 100%;
+      margin-top: 20px;
+    }
+    & > div:nth-of-type(2) {
+      margin-top: 30px;
+      button {
+        margin-top: 58px;
+      }
+    }
+  }
+  .checkmsg {
+    margin-top: 6px;
+    margin-left: 6px;
+    color: #ff4444;
+  }
+
+  .info {
+    display: flex;
+    flex-direction: row;
+    margin-top: 8px;
+    & > i {
+      margin-left: 10px;
+      width: 16px;
+      background: url(@/assets/images/ico_info.png) no-repeat center/contain;
+    }
+  }
+
+  .result {
+    margin-top: 80px;
+    border-top: 1px solid #aaa;
+    & > div {
+      margin-top: 20px;
+      text-align: center;
+    }
+    .social_login {
+      margin-top: 40px;
+      height: 60px;
+    }
+    .user_data {
+      display: flex;
+      flex: row;
+      gap: 40px;
+      justify-content: center;
+      margin-top: 10px;
+      .user_data_id {
+        & > input {
+          margin-right: 8px;
+        }
+      }
+    }
+  }
 }
