--- a/src/style-reset.scss
+++ b/src/style-reset.scss
@@ -41,8 +41,14 @@ button {
     cursor: not-allowed;
   }
 }
-button{
-  background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; overflow:visible; cursor:pointer
+button {
+  background: inherit;
+  border: none;
+  box-shadow: none;
+  border-radius: 0;
+  padding: 0;
+  overflow: visible;
+  cursor: pointer;
 }
 
 input,
@@ -76,9 +82,9 @@ i {
   border: 1px solid #6269f5 !important;
 }
 
-
 // font setting
-* { //default
+* {
+  //default
   color: #000;
   font-family: 'Pretendard-Regular';
   // src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
@@ -96,19 +102,34 @@ i {
 .subtxt {
   font-size: 1.4rem;
 }
+.banner_title {
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+.banner_subtitle {
+  font-size: 1.8rem;
+}
 /* 테블릿 768 사이즈 반응형 */
 @media screen and (min-width: 768px) {
-  * { //default
+  * {
+    //default
     font-size: 1.8rem;
   }
   .title {
-    font-size: 2.0rem;
+    font-size: 2rem;
   }
   .subtitle {
     font-size: 1.8rem;
   }
   .subtxt {
     font-size: 1.6rem;
+  }
+  .banner_title {
+    font-size: 4rem;
+    font-weight: 700;
+  }
+  .banner_subtitle {
+    font-size: 2rem;
   }
 }
 
