--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -255,7 +255,7 @@ header {
 @media screen and (min-width: 1280px) {
   header {
     .header_wrap {
-      width: 67%;
+      max-width: 1280px;
     }
   }
 }
