--- a/src/pages/review/Write.module.scss
+++ b/src/pages/review/Write.module.scss
@@ -1,10 +1,19 @@
 @charset "utf-8";
 
+.invalid {
+  border: 1px solid #ff4444 !important;
+  background-color: #fff !important;
+}
+.valid {
+  background-color: #ffffff !important;
+  border: #6269f5 solid 1px !important;
+}
+
 .write_training_wrap {
   margin: 80px auto;
   .corp_info {
     background-color: #6269f5;
-    padding: 40px 10%;
+    padding: 40px;
     .corp_name {
       color: #fafafa;
       line-height: 34px;
@@ -36,6 +45,323 @@
       }
     }
   }
+  .form_wrap {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 80px;
+    input,
+    select,
+    textarea {
+      width: 100%;
+      height: 60px;
+      padding: 17.5px 16px;
+      border: 1px solid #aaa;
+      border-radius: 3px;
+    }
+    .multiple_choice {
+      .work_info_wrap {
+        .work_info_content {
+          display: flex;
+          flex-direction: column;
+          gap: 40px;
+          margin-top: 12px;
+          & > div {
+            & > div:nth-of-type(1) {
+              margin-bottom: 8px;
+            }
+          }
+          .period {
+            .label {
+              height: 20px;
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              & > div:nth-of-type(2) {
+                input {
+                  width: 20px;
+                  height: 20px;
+                }
+                label {
+                  height: 20px;
+                  line-height: 20px;
+                  margin-left: 5px;
+                  vertical-align: top;
+                }
+              }
+            }
+            .date_pickr {
+              display: flex;
+              flex-direction: row;
+              flex-wrap: nowrap;
+              gap: 8px;
+              & > input {
+                width: calc(50% - 4px);
+              }
+            }
+          }
+          .work_type {
+            select {
+              background-color: #efefef;
+            }
+          }
+        }
+      }
+      .score_wrap {
+        margin-top: 40px;
+        .score_content {
+          display: flex;
+          flex-direction: column;
+          gap: 40px;
+          margin-top: 12px;
+          border: 1px solid #aaa;
+          border-radius: 5px;
+          background-color: #fff;
+          padding: 40px 20px;
+          .score_item {
+            & > div:nth-of-type(1) {
+              margin-bottom: 8px;
+            }
+            .score_star {
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              & > div:nth-of-type(1) {
+                color: #d9d9d9;
+                line-height: 40px;
+              }
+            }
+          }
+        }
+      }
+    }
+    .total_score {
+      margin-top: 40px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      border: 1px solid #aaa;
+      border-radius: 5px;
+      background-color: #fff;
+      padding: 40px 20px;
+    }
+    .subjective {
+      margin-top: 80px;
+      .subjective_content {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        margin-top: 12px;
+        .subjective_item {
+          textarea {
+            margin-top: 8px;
+            padding: 18px 16px;
+            resize: none;
+          }
+          p {
+            text-align: end;
+            color: #aaa;
+          }
+          .long_text {
+            height: auto;
+          }
+        }
+      }
+    }
+    .submit_btn {
+      margin-top: 60px;
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
+
+.write_working_wrap {
+  margin: 80px auto;
+  .corp_info {
+    background-color: #6269f5;
+    padding: 40px;
+    .corp_name {
+      color: #fafafa;
+      line-height: 34px;
+    }
+    .corp_location {
+      margin-top: 5px;
+      color: #fafafa;
+    }
+    .corp_review_cnt {
+      margin-top: 23px;
+      color: #fafafa;
+      text-align: end;
+      & > strong {
+        color: #fafafa;
+      }
+    }
+  }
+  .guide {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 10px;
+    & > p {
+      & > a {
+        color: blue;
+        font-weight: 700;
+      }
+      & > strong {
+        color: red;
+      }
+    }
+  }
+  .form_wrap {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 80px;
+    input,
+    select,
+    textarea {
+      width: 100%;
+      height: 60px;
+      padding: 17.5px 16px;
+      border: 1px solid #aaa;
+      border-radius: 3px;
+    }
+    .multiple_choice {
+      .work_info_wrap {
+        .work_info_content {
+          display: flex;
+          flex-direction: column;
+          gap: 40px;
+          margin-top: 12px;
+          & > div {
+            & > div:nth-of-type(1) {
+              margin-bottom: 8px;
+            }
+          }
+          .period {
+            .label {
+              height: 20px;
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              & > div:nth-of-type(2) {
+                input {
+                  width: 20px;
+                  height: 20px;
+                }
+                label {
+                  height: 20px;
+                  line-height: 20px;
+                  margin-left: 5px;
+                  vertical-align: top;
+                }
+              }
+            }
+            .date_pickr {
+              display: flex;
+              flex-direction: row;
+              flex-wrap: nowrap;
+              gap: 8px;
+              & > input {
+                width: calc(50% - 4px);
+              }
+            }
+          }
+          .work_type {
+            select {
+              background-color: #efefef;
+            }
+          }
+          .keyword {
+            .keyword_wrap {
+              display: flex;
+              flex-direction: row;
+              flex-wrap: wrap;
+              gap: 8px;
+              .keyword_item {
+                width: auto;
+                height: 40px;
+                background-color: #fff;
+                color: #888;
+                border-radius: 5px;
+                padding: 7.5px 20px;
+                cursor: pointer;
+              }
+              .selected {
+                background-color: #6269f5;
+                color: #fff;
+              }
+            }
+          }
+        }
+      }
+      .score_wrap {
+        margin-top: 40px;
+        .score_content {
+          display: flex;
+          flex-direction: column;
+          gap: 40px;
+          margin-top: 12px;
+          border: 1px solid #aaa;
+          border-radius: 5px;
+          background-color: #fff;
+          padding: 40px 20px;
+          .score_item {
+            & > div:nth-of-type(1) {
+              margin-bottom: 8px;
+            }
+            .score_star {
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              & > div:nth-of-type(1) {
+                color: #d9d9d9;
+                line-height: 40px;
+              }
+            }
+          }
+        }
+      }
+    }
+    .total_score {
+      margin-top: 40px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      border: 1px solid #aaa;
+      border-radius: 5px;
+      background-color: #fff;
+      padding: 40px 20px;
+    }
+    .subjective {
+      margin-top: 80px;
+      .subjective_content {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        margin-top: 12px;
+        .subjective_item {
+          textarea {
+            margin-top: 8px;
+            padding: 18px 16px;
+            resize: none;
+          }
+          p {
+            text-align: end;
+            color: #aaa;
+          }
+          .long_text {
+            height: auto;
+          }
+        }
+      }
+    }
+    .submit_btn {
+      margin-top: 60px;
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 
 /* main end */
@@ -49,11 +375,111 @@
         line-height: 56px;
       }
     }
+    .guide {
+      width: 100%;
+    }
+    .form_wrap {
+      width: 100%;
+      .multiple_choice {
+        .work_info_wrap {
+          .work_info_content {
+            border: 1px solid #aaa;
+            border-radius: 5px;
+            background-color: #fff;
+            padding: 40px;
+          }
+        }
+        .score_wrap {
+          .score_content {
+            padding: 40px;
+          }
+        }
+      }
+    }
+  }
+
+  .write_working_wrap {
+    width: 86%;
+    .corp_info {
+      .corp_name {
+        line-height: 56px;
+      }
+    }
+    .guide {
+      width: 100%;
+    }
+    .form_wrap {
+      width: 100%;
+      .multiple_choice {
+        .work_info_wrap {
+          .work_info_content {
+            border: 1px solid #aaa;
+            border-radius: 5px;
+            background-color: #fff;
+            padding: 40px;
+          }
+        }
+        .score_wrap {
+          .score_content {
+            padding: 40px;
+          }
+        }
+      }
+    }
   }
 }
 
 @media screen and (min-width: 1280px) {
   .write_training_wrap {
     width: 67%;
+    .form_wrap {
+      .multiple_choice {
+        height: 878px;
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        .work_info_wrap {
+          width: calc(50% - 10px);
+          height: 100%;
+          .work_info_content {
+            height: calc(100% - 24px);
+          }
+        }
+        .score_wrap {
+          width: calc(50% - 10px);
+          height: 100%;
+          margin-top: 0px;
+        }
+      }
+    }
+  }
+
+  .write_working_wrap {
+    max-width: 1280px;
+    .form_wrap {
+      .multiple_choice {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        gap: 20px;
+        & > div {
+          display: flex;
+          flex-direction: column;
+          & > div {
+            flex-grow: 1;
+          }
+        }
+        .work_info_wrap {
+          width: calc(50% - 10px);
+          height: auto;
+        }
+        .score_wrap {
+          width: calc(50% - 10px);
+          height: auto;
+          margin-top: 0px;
+        }
+      }
+    }
   }
 }
