--- a/src/pages/review/Detail.module.scss
+++ b/src/pages/review/Detail.module.scss
@@ -42,5 +42,112 @@
         border: 1px solid #6269f5;
       }
     }
+    .summary_wrap {
+      margin-top: -1px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      .star_wrap {
+        display: flex;
+        flex-direction: column;
+        gap: 80px;
+        border: 1px solid #aaa;
+        border-radius: 0 5px 5px 5px;
+        background-color: #fff;
+        padding: 60px 48px;
+        .total {
+          & > h1 {
+            margin-top: 8px;
+          }
+          .cnt {
+            color: #888;
+          }
+        }
+        .score_list {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          row-gap: 40px;
+          column-gap: 40px;
+          .score_item {
+            display: flex;
+            flex-direction: column;
+            .score_score {
+              margin-top: 3px;
+              & > p {
+                color: #888;
+              }
+            }
+          }
+        }
+      }
+      .write_review {
+        min-width: 294px;
+        border: 1px solid #aaa;
+        border-radius: 5px;
+        background-color: #fff;
+        padding: 76px 60px;
+        text-align: center;
+        & > p {
+          text-align: center;
+          word-break: keep-all;
+        }
+        & > button {
+          margin-top: 40px;
+          padding: 19px 40px;
+          border: 1px solid #aaa;
+          border-radius: 3px;
+          background-color: #fafafa;
+          color: #6269f5;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+/* main end */
+/* mobile-end */
+
+@media screen and (min-width: 768px) {
+  .detail_working_wrap {
+    width: 86%;
+    max-width: 1280px;
+    .corp_info {
+      .corp_name {
+        line-height: 56px;
+      }
+    }
+    section {
+      width: 100%;
+      .tab {
+        & > div {
+          height: 44px;
+          line-height: 26px;
+        }
+      }
+      .summary_wrap {
+        .star_wrap {
+          flex-direction: row;
+          .score_list {
+            .score_item {
+              flex-direction: row;
+              & > h5 {
+                width: 94px;
+                border-right: 1px solid #d9d9d9;
+              }
+              .score_score {
+                margin-left: 20px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 1490px) {
+  .summary_wrap {
+    flex-direction: row !important;
   }
 }
