--- a/src/style-reset.scss
+++ b/src/style-reset.scss
@@ -81,6 +81,9 @@ i {
   background-color: #fff !important;
   border: 1px solid #6269f5 !important;
 }
+.blur {
+  filter: blur(5px);
+}
 
 // font setting
 a,
