--- a/src/pages/review/Detail.module.scss
+++ b/src/pages/review/Detail.module.scss
@@ -4,7 +4,7 @@
   margin: 80px auto;
   .corp_info {
     background-color: #6269f5;
-    padding: 40px;
+    padding: 40px 10%;
     .corp_name {
       color: #fafafa;
       line-height: 34px;
@@ -248,6 +248,8 @@
     width: 86%;
     max-width: 1280px;
     .corp_info {
+      padding: 40px;
+      border-radius: 5px;
       .corp_name {
         line-height: 56px;
       }
