--- a/src/style-reset.scss
+++ b/src/style-reset.scss
@@ -82,7 +82,11 @@ i {
   border: 1px solid #6269f5 !important;
 }
 .blur {
-  filter: blur(5px);
+  filter: blur(10px);
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 }
 
 // font setting
