--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -86,7 +86,7 @@ header {
           line-height: 1.8;
         }
         & > a::after {
-          content: '';
+          content: "";
           display: inline-block;
           width: 5px;
           height: 10px;
@@ -99,7 +99,7 @@ header {
         cursor: pointer;
       }
       .parent::after {
-        content: '';
+        content: "";
         display: inline-block;
         width: 10px;
         height: 5px;
@@ -134,7 +134,7 @@ header {
       line-height: 1.8;
     }
     .login::before {
-      content: '';
+      content: "";
       display: inline-block;
       transform: translateY(4px);
       width: 18px;
@@ -143,7 +143,7 @@ header {
       background: url(@/assets/images/ico_login.png) no-repeat center/contain;
     }
     .signup::before {
-      content: '';
+      content: "";
       display: inline-block;
       transform: translateY(4px);
       width: 18px;
@@ -162,7 +162,7 @@ header {
       text-overflow: ellipsis;
     }
     .nickname::before {
-      content: '';
+      content: "";
       display: inline-block;
       transform: translateY(4px);
       width: 18px;
@@ -171,7 +171,7 @@ header {
       background: url(@/assets/images/ico_login.png) no-repeat center/contain;
     }
     .logout::before {
-      content: '';
+      content: "";
       display: inline-block;
       transform: translateY(4px);
       width: 18px;
@@ -256,7 +256,7 @@ header {
       margin: 0;
       max-width: 180px;
       flex-grow: 1;
-      justify-content: space-around;
+      justify-content: end;
       & > a {
         margin: 0;
       }
