--- a/src/style-reset.scss
+++ b/src/style-reset.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css');
+@import url("https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css");
 /* font-family: 
 'NanumSquareLight';
 'NanumSquare';
@@ -66,7 +66,7 @@ input:focus {
   text-indent: -9999px;
 }
 .clearfix::after {
-  content: '';
+  content: "";
   display: block;
   clear: both;
 }
@@ -98,8 +98,8 @@ input,
 label,
 button {
   //default
-  color: #000;
-  font-family: 'Pretendard-Regular';
+  color: #222;
+  font-family: "Pretendard-Regular";
   // src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-size: 1.6rem;
   font-style: normal;
