--- a/src/style-reset.scss
+++ b/src/style-reset.scss
@@ -96,7 +96,8 @@ div,
 select,
 input,
 label,
-button {
+button,
+textarea {
   //default
   color: #222;
   font-family: "Pretendard-Regular";
@@ -145,7 +146,8 @@ h5,
   select,
   input,
   label,
-  button {
+  button,
+  textarea {
     font-size: 1.8rem;
   }
   h1,
