--- a/src/pages/review/Search.module.scss
+++ b/src/pages/review/Search.module.scss
@@ -149,6 +149,7 @@
               white-space: nowrap;
               overflow: hidden;
               text-overflow: ellipsis;
+              cursor: pointer;
             }
             .hashtag {
               display: -webkit-box;
